--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Terraform Init
-      run: terraform Init
+      run: terraform init
     
 
 
