--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Terraform Init
-      run: terraform Init
+      run: terraform init
     
     - name: Terraform Validate
       run: terraform Validate
