--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -20,7 +20,7 @@ jobs:
       run: terraform init
     
     - name: Terraform Validate
-      run: terraform Validate
+      run: terraform validate
 
     - name: Terraform Plan
       run: terraform plan
