--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 
 # Ignore any .tfvars teste files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
-# version control.
+# version control. teste
 #
 # example.tfvars
 
